--- a/rLessons/01Intro.Rmd
+++ b/rLessons/01Intro.Rmd
@@ -1,4 +1,4 @@
-Intoduction to R, RStudio, and R Data Structures
+Intoduction to R and RStudio
 ========================================================
 
 *Note: This material is a mash-up from Jenny Bryan's [course materials on r] (http://www.stat.ubc.ca/~jenny/STAT545A/quick-index.html) and Karthik Ram's [material from the Canberra Software Carpentry R Bootcamp](https://github.com/swcarpentry/2013-10-09-canberra).  Anything good is there becuase of Jenny and Karthik.  Mistakes are all mine.*
