--- a/rLessons/Functions.Rmd
+++ b/rLessons/Functions.Rmd
@@ -1,17 +1,16 @@
-Title
+Functions, Control Structures and Documentation
 ========================================================
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring web pages (click the **Help** toolbar button for more details on using R Markdown).
+*Note: This material is a mash-up from Jenny Bryan's [course materials on r] (http://www.stat.ubc.ca/~jenny/STAT545A/quick-index.html) and Karthik Ram's [material from the Canberra Software Carpentry R Bootcamp](https://github.com/swcarpentry/2013-10-09-canberra).  Anything good is there becuase of Jenny and Karthik.  Mistakes are all mine.*
 
-When you click the **Knit HTML** button a web page will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+# Lesson Index:
+- [Functions](#functions)
+- [Control Structures](#control-strucutres)
+- [Documentation](#documentation)
 
-```{r}
-summary(cars)
-```
 
-You can also embed plots, for example:
+# Functions
 
-```{r fig.width=7, fig.height=6}
-plot(cars)
-```
+# Control Structures
 
+# Documentation
