--- a/rLessons/Data.Rmd
+++ b/rLessons/Data.Rmd
@@ -291,6 +291,7 @@ Lists are extremely useful inside functions. You can "staple" together lots of d
 It doesn't print out like a vector. Prints a new line for each element.
 
 Elements are indexed by double brackets. Single brackets will still return a(nother) list.
+
 ---
 
 ### Factors
@@ -876,6 +877,16 @@ Two packages that are very widely used for data manipulation are `plyr` and `res
 For more on these, see Karthik Ram's Canberra Bootcamp Materials on [`plyr` and `reshape`](https://github.com/swcarpentry/2013-10-09-canberra/blob/master/03-data-manipulation/03-split-apply.md)
 
 ## Data Manipulation Exercise
-In our last exercise, we pulled in three datasets
+In our last exercise, we pulled in three datasets, created data frames from them and answered some basic questions about those data frames.  One of the first things you will notice is that EPA is very fond of large, verbose data structures.  There is a lot more informaiton in these three data frames than we really would like.  The purpose of this exercise is to pull out information we would like to keep, create a single data frame for some future analysis, do some basic analysis, and write the resulting data frame to disc. As before, all steps must be done in R and save your commands in a commented script.
+
+1. Subset your station information data frame so that you only have the following columns: SITE_ID, VISIT_NO, SITE_TYPE, STATE_NAME
+2. Subset your water quality information so that you have: SITE_ID, NTL, PTL, CHLA 
+3. Susbset your landuse data frame so that you have: SITE_ID, PCT_DEVELOPED_BUFR,  PCT_FOREST_BUFR, PCT_AGRIC_BUFR, and PCT_WETLAND_BUFR.
+4. Subset your streamlined verison of station information (created in step 1) so that only the first visit of the probability lakes are returned.  First visits are those records that have a VISIT_NO of 1 and probability lakes are SITE_TYPE of PROB_lake.
+5. Create a single data frame that combines the station information from step 4, the water quality info from step 2, and the landuse information from step 3. 
+6. How many rows and columns in this new data frame?  Is it what you expected?
+7. Calculate the mean, median, min, and max (1st and 3rd quartiles ok too) for each of the data columns.  You can do this many ways, but you have the tools to do it in one, very clean line of code!
+8. Once you are certain your new data frame has all the proper rows and columns, write the data frame out to a .csv file.  We will be using this file as input later, so keep track of where you put it.
+
 
 
